# XOR-Cipher

./: CMakeLists.txt  Encryptor.cpp  Encryptor.h  README.md  Tree.cpp  Tree.h  api.js  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  package-lock.json  package.json  server.js
backend/: Encryptor.cpp  Encryptor.h  Tree.cpp  Tree.h  crypto.cpp  crypto.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
frontend/: index.html  login.html  script.js  style.css
